src/css/custom.css
/**
 * Any CSS included here will be global. The classic template
 * bundles Infima by default. Infima is a CSS framework designed to
 * work well for content-centric websites.
 */

/* You can override the default Infima variables here. */
:root {
  /* Custom */
  --dark-background0: #22252a;
  --dark-background1: #171D25;
  --dark-background2: #0D1117;
  --dark-primary: #D8D4CE;
  --dark-hover: #bbb7b2;
  --dark-h: #E0DCD7;
  --yellow: #FFBD00;
  --gray: #8B8E92;

  --ifm-color-primary: var(--yellow);
  --ifm-color-primary-dark: var(--yellow);
  --ifm-color-primary-darker: var(--yellow);
  --ifm-color-primary-darkest: var(--yellow);
  --ifm-color-primary-light: var(--yellow);
  --ifm-color-primary-lighter: var(--yellow);
  --ifm-color-primary-lightest: var(--yellow);
  --ifm-code-font-size: 95%;
  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
}

.main-wrapper {
  background: var(--dark-background1);
}

.footer {
  background: url(/img/4ga_footer.png) center center no-repeat;
  background-size: contain;
  background-color: var(--dark-background0);
  display: flex;
  align-items: end;
  padding: 3rem 0.75rem 0 0.75rem;
}

.footer__col {
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding: 0 1.5rem;
}

.footer a {
  text-decoration: none;
  color: var(--dark-primary);
}

.footer a:hover,
.footer a:focus,
.footer a:active {
  color: var(--dark-hover);
  outline: none;
}

.footer__title {
  color: var(--dark-h);
}

.footer__links {
  max-width: 1320px;
  padding: 3rem 0 3rem 0;
  margin: 0 auto;
}

.footer__bottom {
  max-width: 1200px;
  margin: 0 auto;
  padding: 25px 0;
  font-size: 14px;
  border-top: 1px solid rgba(256, 256, 256, .1);
  font-family: Verdana, sans-serif;
  color: var(--dark-primary);
}

.footer-custom-logo {
  max-width: 100%;
  height: auto;
}

.header-github svg {
  width: 30px;
  height: 30px;
}

.header-github {
  display: flex;
  align-items: center;
  color: var(--dark-primary);
  path {
      fill: var(--gray);
  }
  white-space: nowrap;
}

.header-github:hover,
.header-github:focus,
.header-github:active {
  outline: none;
  color: var(--yellow);

  path {
      fill: var(--yellow);
  }
}

.header-github p {
  margin: 0 0 0 0.5rem;
}

.navbar {
  background: var(--dark-background0);
}

.hero--primary {
  background: var(--dark-background2);
}

.color-dark-h {
  color: var(--dark-h);
}

.color-dark-primary {
  color: var(--dark-primary);
}

.button {
  background: var(--yellow);
  border-color: var(--yellow);
}

.container {
  max-width: initial !important;
}

.col--3 { 
  max-width: 10% !important;
  flex: 1 1 0;
 }

.docMainContainer_TBSr {
  margin: 0 1rem 0 2rem;
}

.docMainContainer_TBSr .docItemCol_VOVn {
  flex: 1 1 0;
  max-width: 85% !important;
}

.docMainContainer_TBSr .generatedIndexPage_vN6x {
  max-width: 85% !important;
}

.admonitionHeading_Gvgb {
  display: none;
}

.heroBanner_qdFl {
  padding: 2rem 0 !important;
}

/* Search - selected option */
.suggestion_fB_2[aria-selected="true"] path,
.suggestion_fB_2:hover path,
.suggestion_fB_2:focus path,
.suggestion_fB_2:active path {
  stroke: var(--dark-background2) !important;
}

.suggestion_fB_2[aria-selected="true"] .hitWrapper_sAK8 .hitTitle_vyVt,
.suggestion_fB_2:hover .hitWrapper_sAK8 .hitTitle_vyVt,
.suggestion_fB_2:focus .hitWrapper_sAK8 .hitTitle_vyVt,
.suggestion_fB_2:active .hitWrapper_sAK8 .hitTitle_vyVt,
.suggestion_fB_2[aria-selected="true"] .hitWrapper_sAK8 mark,
.suggestion_fB_2:hover .hitWrapper_sAK8 mark,
.suggestion_fB_2:focus .hitWrapper_sAK8 mark,
.suggestion_fB_2:active .hitWrapper_sAK8 mark,
.suggestion_fB_2[aria-selected="true"] .hitWrapper_sAK8 .hitPath_ieM4,
.suggestion_fB_2:hover .hitWrapper_sAK8 .hitPath_ieM4,
.suggestion_fB_2:focus .hitWrapper_sAK8 .hitPath_ieM4,
.suggestion_fB_2:active .hitWrapper_sAK8 .hitPath_ieM4 {
  color: var(--dark-background2) !important;
}

